; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/hsu/extr_hsu.c_hsu_dma_issue_pending.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/hsu/extr_hsu.c_hsu_dma_issue_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_chan = type { i32 }
%struct.hsu_dma_chan = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_chan*)* @hsu_dma_issue_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hsu_dma_issue_pending(%struct.dma_chan* %0) #0 {
  %2 = alloca %struct.dma_chan*, align 8
  %3 = alloca %struct.hsu_dma_chan*, align 8
  %4 = alloca i64, align 8
  store %struct.dma_chan* %0, %struct.dma_chan** %2, align 8
  %5 = load %struct.dma_chan*, %struct.dma_chan** %2, align 8
  %6 = call %struct.hsu_dma_chan* @to_hsu_dma_chan(%struct.dma_chan* %5)
  store %struct.hsu_dma_chan* %6, %struct.hsu_dma_chan** %3, align 8
  %7 = load %struct.hsu_dma_chan*, %struct.hsu_dma_chan** %3, align 8
  %8 = getelementptr inbounds %struct.hsu_dma_chan, %struct.hsu_dma_chan* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @spin_lock_irqsave(i32* %9, i64 %10)
  %12 = load %struct.hsu_dma_chan*, %struct.hsu_dma_chan** %3, align 8
  %13 = getelementptr inbounds %struct.hsu_dma_chan, %struct.hsu_dma_chan* %12, i32 0, i32 0
  %14 = call i64 @vchan_issue_pending(%struct.TYPE_2__* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %1
  %17 = load %struct.hsu_dma_chan*, %struct.hsu_dma_chan** %3, align 8
  %18 = getelementptr inbounds %struct.hsu_dma_chan, %struct.hsu_dma_chan* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %16
  %22 = load %struct.hsu_dma_chan*, %struct.hsu_dma_chan** %3, align 8
  %23 = call i32 @hsu_dma_start_transfer(%struct.hsu_dma_chan* %22)
  br label %24

24:                                               ; preds = %21, %16, %1
  %25 = load %struct.hsu_dma_chan*, %struct.hsu_dma_chan** %3, align 8
  %26 = getelementptr inbounds %struct.hsu_dma_chan, %struct.hsu_dma_chan* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i64, i64* %4, align 8
  %29 = call i32 @spin_unlock_irqrestore(i32* %27, i64 %28)
  ret void
}

declare dso_local %struct.hsu_dma_chan* @to_hsu_dma_chan(%struct.dma_chan*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @vchan_issue_pending(%struct.TYPE_2__*) #1

declare dso_local i32 @hsu_dma_start_transfer(%struct.hsu_dma_chan*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
